--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
