--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.2",
