--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.4.3",
     "bootstrap": "^5.1.3",
     "next": "12.0.8",
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spring": "^9.4.3",
     "styled-components": "^5.3.3",
     "yarn": "^1.22.17"
   },
