--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-scroll-parallax": "^3.0.3",
     "react-spring": "^9.4.3",
     "styled-components": "^5.3.3",
