--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
