--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@u-wave/react-vimeo": "^0.9.10",
     "bootstrap": "^5.1.3",
     "next": "12.0.8",
     "next-images": "^1.8.4",
