--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-hotjar": "^6.1.0",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
     "yarn": "^1.22.17"
